compiler/tests/en/errors/uchar_multi.salam
// EXPECT: codepoint
func main:
    x := u"AB"
    println x
end
